<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Restaurant Template</string>
    <string name="action_settings">Settings</string>
    
    <string name="restuarant_name">Restaurant Name</string>
    <string name="menu_text">Menu</string>
    <string name="about_us_text">About Us</string>
    <string name="special_offers_text">Special Offers</string>
    <string name="call_us_text">Call Us</string>
    <string name="directions_text">Directions</string>
    
    <string name="menu_title">Menu Title</string>
    
    <string name="menu_label">Menu</string>
    <string name="about_label">About Us</string>
    <string name="checkout_label">Checkout</string>
    <string name="delivery_label">Delivery</string>
    
    <string name="added_to_order_toast">Added To Order</string>
    
    <string name="checkout">Checkout</string>
    <string name="place_order">Place Order</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="view_cart">View Cart</string>
    
    
    
    
    

</resources>
