<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@layout/main_screen_background" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/restaurant_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/restuarant_name"
            android:textSize="36sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <Button
            android:id="@+id/order_button"
            style="@style/MenuButton"
            android:text="@string/menu_label" />

        <Button
            android:id="@+id/about_button"
            style="@style/MenuButton"
            android:text="@string/about_label" />

        <Button
            android:id="@+id/special_offers_button"
            style="@style/MenuButton"
            android:text="@string/special_offers_text" />

        <Button
            android:id="@+id/directions_button"
            style="@style/MenuButton"
            android:text="@string/directions_text" />

        <Button
            android:id="@+id/contact_button"
            style="@style/MenuButton"
            android:text="@string/call_us_text" />
    </LinearLayout>

</ScrollView>